load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select")

m_k_files()

ddk_module(
    name = "aml_media",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_MEDIA_MODULE": {
            True: ["media_main.c"],
        },
        "CONFIG_AMLOGIC_MEDIA_COMMON": {
            True: [
                "common/arch/registers/register_map.c",
                "common/arch/registers/register_ops.c",
                "common/arch/registers/register_ops_m8.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_CANVAS": {
            True: [
                "common/canvas/canvas.c",
                "common/canvas/canvas_mgr.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_GE2D": {
            True: [
                "common/ge2d/bitblt.c",
                "common/ge2d/fillrect.c",
                "common/ge2d/ge2d_hw.c",
                "common/ge2d/ge2dgen.c",
                "common/ge2d/ge2d_wq.c",
                "common/ge2d/stretchblt.c",
                "common/ge2d/ge2d_main.c",
                "common/ge2d/blend.c",
                "common/ge2d/ge2d_dmabuf.c",
            ],
        },
        "CONFIG_AMLOGIC_ION": {
            True: [
                "common/ion_dev/ion/ion.c",
                "common/ion_dev/ion/ion_heap.c",
            ],
        },
        "CONFIG_AMLOGIC_ION_SYSTEM_HEAP": {
            True: [
                "common/ion_dev/ion/ion_system_heap.c",
                "common/ion_dev/ion/ion_system_contig_heap.c",
                "common/ion_dev/ion/ion_page_pool.c",
            ],
        },
        "CONFIG_AMLOGIC_ION_DEV": {
            True: [
                "common/ion_dev/dev_ion.c",
                "common/ion_dev/ion_cma_heap.c",
                "common/ion_dev/ion_codec_mm_heap.c",
            ],
        },
        "CONFIG_AMLOGIC_VPU": {
            True: [
                "common/vpu/vpu.c",
                "common/vpu/vpu_arb.c",
                "common/vpu/vpu_reg.c",
                "common/vpu/vpu_power.c",
                "common/vpu/vpu_clk.c",
		"common/vpu/vpu_sideband.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_RDMA": {
            True: [
                "common/rdma/rdma_mgr.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_VSYNC_RDMA": {
            True: [
                "common/rdma/rdma.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_CODEC_MM": {
            True: [
                "common/codec_mm/codec_mm.c",
                "common/codec_mm/codec_mm_scatter.c",
                "common/codec_mm/codec_mm_keeper.c",
                "common/codec_mm/dmabuf_manage.c",
                "common/codec_mm/codec_mm_track.c",
                "common/codec_mm/codec_mm_track_kps.c",
                "common/codec_mm/codec_mm_state.c",
                "common/codec_mm/codec_mm_sys.c",
                "common/codec_mm/codec_mm_prealloc.c",
                "common/codec_mm/configs/configs.c",
                "common/codec_mm/configs/configs_module.c",
                "common/codec_mm/configs/configs_test.c",
            ],
        },
        "CONFIG_AMLOGIC_UVM_CORE": {
            True: [
                "common/uvm_process/amlogic_fbc_hook.c",
                "common/uvm_process/attach_uvm_processor.c",
                "common/uvm_process/meson_uvm_buffer_info.c",
            ],
        },
        "CONFIG_AMLOGIC_UVM_PROCESSOR": {
            True: [
                "common/uvm_process/meson_uvm_nn_processor.c",
                "common/uvm_process/meson_uvm_aipq_processor.c",
                "common/uvm_process/meson_uvm_aiface_processor.c",
                "common/uvm_process/meson_uvm_aicolor_processor.c",
                "common/uvm_process/meson_uvm_lcevc_processor.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_VFM": {
            True: [
                "common/vfm/vfm.c",
                "common/vfm/vframe_provider.c",
                "common/vfm/vframe_receiver.c",
                "common/vfm/vftrace.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_LUT_DMA": {
            True: [
                "common/lut_dma/lut_dma_mgr.c",
                "common/lut_dma/lut_dma_io.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_SECURITY": {
            True: ["common/vpu_security/vpu_security.c"],
        },
        "CONFIG_AMLOGIC_MEDIA_RESMANAGE": {
            True: [
                "common/resource_mgr/resourcemanage.c",
                "common/resource_mgr/cjson.c",
            ],
        },
        "CONFIG_AMLOGIC_SECURE_DMABUF": {
            True: ["common/dma-buf-heaps/amlogic_secure_dmabuf.c"],
        },
        "CONFIG_AMLOGIC_HEAP_CMA": {
            True: ["common/dma-buf-heaps/amlogic_heap_cma.c"],
        },
        "CONFIG_AMLOGIC_HEAP_CODEC_MM": {
            True: ["common/dma-buf-heaps/amlogic_heap_codec_mm.c"],
        },
        "CONFIG_AMLOGIC_HEAP_SECURE": {
            True: ["common/dma-buf-heaps/amlogic_heap_secure.c"],
        },
        "CONFIG_AMLOGIC_MEDIA_SW_SYNC": {
            True: [
                "common/sw_sync/osd_sw_sync.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_VICP": {
            True: [
                "common/vicp/vicp_main.c",
                "common/vicp/vicp_reg.c",
                "common/vicp/vicp_log.c",
                "common/vicp/vicp_process.c",
                "common/vicp/vicp_rdma.c",
                "common/vicp/vicp_hardware.c",
                "common/vicp/vicp_hdr.c",
                "common/vicp/vicp_test.c",
                "common/vicp/vicp_module.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_PROXY": {
            True: ["common/media_proxy/media_proxy.c"],
        },
        "CONFIG_AMLOGIC_VOUT_CLK_SERVE": {
            True: ["vout/vclk_serve/vclk_serve.c"],
        },
        "CONFIG_AMLOGIC_VOUT_SERVE": {
            True: [
                "vout/vout_serve/vout_reg.c",
                "vout/vout_serve/vout_mux.c",
                "vout/vout_serve/vout_sys_serve.c",
                "vout/vout_serve/dummy_venc.c",
                "vout/vout_serve/vout_notify.c",
                "vout/vout_serve/vout_serve.c",
                "vout/vout_serve/vout_func.c",
                "vout/vout_serve/vout_null_server.c",
            ],
        },
        "CONFIG_AMLOGIC_VOUT2_SERVE": {
            True: [
                "vout/vout_serve/vout2_notify.c",
                "vout/vout_serve/vout2_serve.c",
            ],
        },
        "CONFIG_AMLOGIC_VOUT3_SERVE": {
            True: [
                "vout/vout_serve/vout3_notify.c",
                "vout/vout_serve/vout3_serve.c",
            ],
        },
        "CONFIG_AMLOGIC_eDPTX": {
            True: [
                "vout/eDPTX/CLK/dptx_clk_if.c",
                "vout/eDPTX/CLK/dptx_clk_t7.c",
                "vout/eDPTX/CLK/dptx_clk_utils.c",
                "vout/eDPTX/DPTX_IP/dptx_IP_interface.c",
                "vout/eDPTX/DPTX_IP/dptx_IP_triliner_DP14.c",
                "vout/eDPTX/DPTX_IP/dptx_IP_triliner_DP12.c",
                "vout/eDPTX/PHY/dptx_phy_if.c",
                "vout/eDPTX/PHY/dptx_phy_t7.c",
                "vout/eDPTX/VENC/dptx_venc_if.c",
                "vout/eDPTX/VENC/dptx_venc_t7.c",
                "vout/eDPTX/dptx_common.c",
                "vout/eDPTX/dptx_DACP.c",
                "vout/eDPTX/dptx_debug.c",
                "vout/eDPTX/dptx_driver.c",
                "vout/eDPTX/dptx_drm.c",
                "vout/eDPTX/dptx_EDID_DisplayID.c",
                "vout/eDPTX/dptx_link_training.c",
                "vout/eDPTX/dptx_notify.c",
                "vout/eDPTX/dptx_reg_op.c",
                "vout/eDPTX/dptx_utils.c",
                "vout/eDPTX/dptx_vmode_mgr.c",
                "vout/eDPTX/dptx_vout.c",
                "vout/eDPTX/dptx_vout_serve.c",
                "vout/eDPTX/eDP_backlight_wrapper.c",
            ],
        },
        "CONFIG_AMLOGIC_TX_CONNECTOR_COMMON": {
            True: [
                "vout/hdmi_tx_connector/hdmitx_boot_parameters.c",
                "vout/hdmi_tx_connector/hdmitx_common.c",
                "vout/hdmi_tx_connector/hdmitx_sysfs_common.c",
                "vout/hdmi_tx_connector/hdmitx_edid_parse.c",
                "vout/hdmi_tx_connector/hdmitx_hw_common.c",
                "vout/hdmi_tx_connector/hdmitx_hdr.c",
                "vout/hdmi_tx_connector/hdmitx_mode.c",
                "vout/hdmi_tx_connector/hdmitx_format_para.c",
                "vout/hdmi_tx_connector/hdmitx_mode_set.c",
                "vout/hdmi_tx_connector/hdmitx_vout.c",
                "vout/hdmi_tx_connector/hdmitx_audio.c",
                "vout/hdmi_tx_connector/hdmitx_tracer_linux.c",
                "vout/hdmi_tx_connector/hdmitx_event_mgr_linux.c",
                "vout/hdmi_tx_connector/hdmitx_log.c",
                "vout/hdmi_tx_connector/hdmitx_compliance.c",
                "vout/hdmi_tx_connector/hdmitx_check_valid.c",
                "vout/hdmi_tx_connector/hdmitx_hdcp.c",
                "vout/hdmi_tx_connector/hdmitx_infoframe.c",
                "vout/hdmi_tx_connector/hdmitx_dump.c",
                "vout/hdmi_tx_connector/hdmitx_ext.c",
                "vout/hdmi_tx_connector/hdmitx_drv.c",
            ],
        },
        "CONFIG_AMLOGIC_HDMITX": {
            True: [
                "vout/hdmi_tx_connector/hdmitx/tx20/esm_hdcp_tx.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_hdcp.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_scdc.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_hw.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_dump.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_reg_ops.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_enc_cfg_hw.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_ddc.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_check_sha.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_hw_txlx.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_hw_clk.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_hw_g12a.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_hw_sm1.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_hw_tm2.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_hw_sc2.c",
            ],
        },

        "CONFIG_AMLOGIC_HDMITX_GXX": {
            True: [
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_hw_gxbb.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_hw_gxtvbb.c",
                "vout/hdmi_tx_connector/hdmitx/tx20/hdmitx_hw_gxl.c",
            ],
        },
        "CONFIG_AMLOGIC_HDMITX21": {
            True: [
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_scdc.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_vrr.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_frl.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_hw.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_pktmgmt.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_reg_ops.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_enc_cfg_hw.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_ddc.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_hw_clk.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_dump.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_hw_t7.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_hw_s5.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_hw_s7.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_hw_s1a.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_hw_s7d.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_hw_s6.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_interrupts.c",
                "vout/hdmi_tx_connector/hdmitx/tx21/hdmitx_frl_training.c",
            ],
        },
        "CONFIG_AMLOGIC_HDCP_TX": {
            True: [
                "vout/hdmi_tx_connector/hdcp/hdmitx_hdcp.c",
                "vout/hdmi_tx_connector/hdcp/hdmitx_hw_hdcp.c",
            ],
        },
        "CONFIG_AMLOGIC_TX_CONNECTOR_COMMON_MODERN": {
            True: [
                "vout/meson_tx_connector/meson_tx_task_mgr_linux.c",
                "vout/meson_tx_connector/meson_tx_dev.c",
                "vout/meson_tx_connector/meson_tx_hw.c",
                "vout/meson_tx_connector/meson_tx_log.c",
                "vout/meson_tx_connector/meson_tx_edid_parse.c",
                "vout/meson_tx_connector/meson_tx_mode.c",
                "vout/meson_tx_connector/meson_tx_vout.c",
                "vout/meson_tx_connector/meson_tx_mode_set.c",
                "vout/meson_tx_connector/meson_tx_event_mgr.c",
                "vout/meson_tx_connector/phy/meson_tx_phy_core.c",
                "vout/meson_tx_connector/phy/meson_tx_phy_drv.c",
                "vout/meson_tx_connector/phy/meson_tx_dummy_phy_drv.c",
            ],
        },
        "CONFIG_AMLOGIC_DPTX_DRIVER": {
            True: [
                "vout/meson_tx_connector/dptx/dptx_drv.c",
                "vout/meson_tx_connector/dptx/dptx_log.c",
                "vout/meson_tx_connector/dptx/dptx_sysfs.c",
                "vout/meson_tx_connector/dptx/dptx_common.c",
                "vout/meson_tx_connector/dptx/dptx_aux_helper.c",
                "vout/meson_tx_connector/dptx/dptx_check_valid.c",
                "vout/meson_tx_connector/dptx/dptx_vout.c",
                "vout/meson_tx_connector/dptx/dptx_link.c",
                "vout/meson_tx_connector/dptx/dptx_hw_common.c",
            ],
        },
        "CONFIG_AMLOGIC_DPTX": {
            True: [
                "vout/meson_tx_connector/dptx/dp20/dptx_hw.c",
                "vout/meson_tx_connector/dptx/dp20/dptx_reg.c",
                "vout/meson_tx_connector/dptx/dp20/dptx_hw_aux.c",
            ],
        },
        "CONFIG_AMLOGIC_HDMITX_DRIVER_MODERN": {
            True: [
                "vout/meson_tx_connector/hdmitx/hdmitx_boot_parameters.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_common.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_sysfs_common.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_hw_common.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_hdr.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_format_para.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_mode_set.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_vout.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_audio.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_tracer_linux.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_event_mgr_linux.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_log.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_compliance.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_check_valid.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_hdcp.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_infoframe.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_dump.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_ext.c",
                "vout/meson_tx_connector/hdmitx/hdmitx_drv.c",
            ],
        },
        "CONFIG_AMLOGIC_HDMITX_MODERN": {
            True: [
                "vout/meson_tx_connector/hdmitx/tx20/esm_hdcp_tx.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_hdcp.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_scdc.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_hw.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_dump.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_reg_ops.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_enc_cfg_hw.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_ddc.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_check_sha.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_hw_txlx.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_hw_clk.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_hw_g12a.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_hw_sm1.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_hw_tm2.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_hw_sc2.c",
            ],
        },

        "CONFIG_AMLOGIC_HDMITX_GXX_MODERN": {
            True: [
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_hw_gxbb.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_hw_gxtvbb.c",
                "vout/meson_tx_connector/hdmitx/tx20/hdmitx_hw_gxl.c",
            ],
        },
        "CONFIG_AMLOGIC_HDMITX21_MODERN": {
            True: [
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_scdc.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_vrr.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_frl.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_hw.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_pktmgmt.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_reg_ops.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_enc_cfg_hw.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_ddc.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_hw_clk.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_dump.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_hw_t7.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_hw_s5.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_hw_s7.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_hw_s1a.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_hw_s7d.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_hw_s6.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_interrupts.c",
                "vout/meson_tx_connector/hdmitx/tx21/hdmitx_frl_training.c",
            ],
        },
        "CONFIG_AMLOGIC_HDCP_TX_MODERN": {
            True: [
                "vout/meson_tx_connector/hdcp/hdmitx_hdcp.c",
                "vout/meson_tx_connector/hdcp/hdmitx_hw_hdcp.c",
            ],
        },
        "CONFIG_AMLOGIC_CVBS_OUTPUT": {
            True: [
                "vout/cvbs/cvbs_out.c",
                "vout/cvbs/cvbs_out_reg.c",
                "vout/cvbs/enc_clk_config.c",
            ],
        },
        "CONFIG_AMLOGIC_WSS": {
            True: ["vout/cvbs/wss.c"],
        },
        "CONFIG_AMLOGIC_VDAC": {
            True: [
                "vout/vdac/vdac_dev.c",
                "vout/vdac/vdac_config.c",
            ],
        },
        "CONFIG_AMLOGIC_LCD": {
            True: [
                "vout/lcd/lcd_vout.c",
                "vout/lcd/lcd_reg.c",
                "vout/lcd/lcd_common.c",
                "vout/lcd/lcd_config.c",
                "vout/lcd/lcd_cus_ctrl.c",
                "vout/lcd/lcd_notify.c",
                "vout/lcd/lcd_debug.c",
                "vout/lcd/lcd_drm.c",
                "vout/lcd/lcd_dphy_ctrl.c",
                "vout/lcd/lcd_math.c",
                "vout/lcd/lcd_frame_lock.c",
                "vout/lcd/lcd_resman/lcd_resman.c",
                "vout/lcd/lcd_resman/lcd_memory.c",
                "vout/lcd/lcd_resman/json_parse.c",
                "vout/lcd/lcd_resman/json_util.c",
                "vout/lcd/lcd_resman/lcd_json.c",
                "vout/lcd/lcd_resman/ini_parser.c",
                "vout/lcd/lcd_resman/ini_handle.c",
                "vout/lcd/lcd_resman/lcd_ini.c",
                "vout/lcd/lcd_resman/lcd_model.c",
                "vout/lcd/lcd_venc/lcd_venc_if.c",
                "vout/lcd/lcd_venc/lcd_venc_dft.c",
                "vout/lcd/lcd_venc/lcd_venc_t7.c",
                "vout/lcd/lcd_venc/lcd_venc_c3.c",
                "vout/lcd/lcd_venc/lcd_venc_t3x.c",
                "vout/lcd/lcd_mode_common.c",
                "vout/lcd/lcd_mode_tablet.c",
                "vout/lcd/lcd_mode_tv.c",
                "vout/lcd/lcd_device_mgr.c",
                "vout/lcd/connectors/lcd_connector_common.c",
                "vout/lcd/connectors/lvds.c",
                "vout/lcd/connectors/DPI.c",
                "vout/lcd/lcd_clk/lcd_clk_c3.c",
                "vout/lcd/lcd_clk/lcd_clk_if.c",
                "vout/lcd/lcd_clk/lcd_clk_utils.c",
                "vout/lcd/lcd_phy/lcd_phy_c3.c",
                "vout/lcd/lcd_phy/lcd_phy_g12.c",
                "vout/lcd/lcd_phy/lcd_phy_t3_t5m.c",
                "vout/lcd/lcd_phy/lcd_phy_t6d.c",
                "vout/lcd/lcd_phy/lcd_phy_t3x.c",
                "vout/lcd/lcd_phy/lcd_phy_t5d.c",
                "vout/lcd/lcd_phy/lcd_phy_t5w.c",
                "vout/lcd/lcd_phy/lcd_phy_t7.c",
                "vout/lcd/lcd_phy/lcd_phy_s6.c",
                "vout/lcd/lcd_phy/lcd_phy_tm2.c",
                "vout/lcd/lcd_phy/lcd_phy_txhd2.c",
                "vout/lcd/lcd_phy/lcd_phy_if.c",
                "vout/lcd/lcd_phy/lcd_phy_utils.c",
            ],
        },
        "CONFIG_AMLOGIC_LCD_CLK_SOC": {
            True: [
                "vout/lcd/lcd_clk/lcd_clk_g12.c",
                "vout/lcd/lcd_clk/lcd_clk_tm2.c",
                "vout/lcd/lcd_clk/lcd_clk_t5d.c",
                "vout/lcd/lcd_clk/lcd_clk_t7.c",
                "vout/lcd/lcd_clk/lcd_clk_t3_t5m.c",
                "vout/lcd/lcd_clk/lcd_clk_t6d.c",
                "vout/lcd/lcd_clk/lcd_clk_t5w.c",
                "vout/lcd/lcd_clk/lcd_clk_txhd2.c",
                "vout/lcd/lcd_clk/lcd_clk_t3x.c",
                "vout/lcd/lcd_clk/lcd_clk_s6.c",
            ],
        },
        "CONFIG_AMLOGIC_LCD_TCON": {
            True: [
                "vout/lcd/connectors/tcon/lcd_tcon.c",
                "vout/lcd/connectors/tcon/lcd_tcon_hw.c",
                "vout/lcd/connectors/tcon/lcd_tcon_fw_param.c",
                "vout/lcd/connectors/tcon/lcd_tcon_debug.c",
                "vout/lcd/connectors/tcon/lcd_tcon_pdf.c",
                "vout/lcd/connectors/tcon/lcd_tcon_rdma.c",
                "vout/lcd/connectors/tcon/lcd_tcon_swpdf.c",
            ],
        },
        "CONFIG_AMLOGIC_LCD_VBYONE": {
            True: [
                "vout/lcd/connectors/vbyone.c",
            ],
        },
        "CONFIG_AMLOGIC_LCD_MIPI_DSI": {
            True: [
                "vout/lcd/connectors/MIPI_DSI/dsi_addons/dsi_check_panel.c",
                "vout/lcd/connectors/MIPI_DSI/dsi_ctrl/dsi_ctrl_if.c",
                "vout/lcd/connectors/MIPI_DSI/dsi_ctrl/dsi_ctrl_v1.c",
                "vout/lcd/connectors/MIPI_DSI/dsi_ctrl/dsi_ctrl_v2.c",
                "vout/lcd/connectors/MIPI_DSI/dsi_common.c",
                "vout/lcd/connectors/MIPI_DSI/dsi_debug.c",
            ],
        },
        "CONFIG_AMLOGIC_LCD_EXTERN": {
            True: [
                "vout/lcd/lcd_extern/lcd_extern.c",
                "vout/lcd/lcd_extern/lcd_extern_config.c",
                "vout/lcd/lcd_extern/ext_i2c_dev.c",
                "vout/lcd/lcd_extern/ext_spi_dev.c",
                "vout/lcd/lcd_extern/ext_func.c",
                "vout/lcd/lcd_extern/ext_default.c",
            ],
        },
        "CONFIG_AMLOGIC_LCD_EXTERN_I2C_OLED": {
            True: ["vout/lcd/lcd_extern/i2c_oled.c"],
        },
        "CONFIG_AMLOGIC_LCD_EXTERN_I2C_ANX6862_7911": {
            True: ["vout/lcd/lcd_extern/i2c_ANX6862_7911.c"],
        },
        "CONFIG_AMLOGIC_LCD_EXTERN_I2C_CS602": {
            True: ["vout/lcd/lcd_extern/i2c_CS602.c"],
        },
        "CONFIG_AMLOGIC_BACKLIGHT": {
            True: [
                "vout/lcd/backlight/lcd_bl.c",
                "vout/lcd/backlight/lcd_bl_config.c",
                "vout/lcd/backlight/bl_pwm.c",
            ],
        },
        "CONFIG_AMLOGIC_BL_EXTERN": {
            True: [
                "vout/lcd/backlight/bl_extern/bl_extern_i2c.c",
                "vout/lcd/backlight/bl_extern/bl_extern.c",
            ],
        },
        "CONFIG_AMLOGIC_BL_EXTERN_I2C_LP8556": {
            True: ["vout/lcd/backlight/bl_extern/i2c_lp8556.c"],
        },
        "CONFIG_AMLOGIC_BL_EXTERN_MIPI_LT070ME05": {
            True: ["vout/lcd/backlight/bl_extern/mipi_lt070me05.c"],
        },
        "CONFIG_AMLOGIC_BL_LDIM": {
            True: [
                "vout/lcd/backlight/bl_ldim/ldim_drv.c",
                "vout/lcd/backlight/bl_ldim/ldim_fw_param.c",
                "vout/lcd/backlight/bl_ldim/ldim_debug.c",
                "vout/lcd/backlight/bl_ldim/ldim_mem.c",
                "vout/lcd/backlight/bl_ldim/ldim_reg.c",
                "vout/lcd/backlight/bl_ldim/ldim_dev_drv.c",
                "vout/lcd/backlight/bl_ldim/ldim_dev_config.c",
                "vout/lcd/backlight/bl_ldim/ldim_spi.c",
                "vout/lcd/backlight/bl_ldim/global_bl.c",
            ],
        },
        "CONFIG_AMLOGIC_BL_LDIM_OB3350": {
            True: ["vout/lcd/backlight/bl_ldim/ob3350_bl.c"],
        },
        "CONFIG_AMLOGIC_BL_LDIM_IW7038": {
            True: ["vout/lcd/backlight/bl_ldim/iw7038_bl.c"],
        },
        "CONFIG_AMLOGIC_BL_LDIM_IW7027": {
            True: ["vout/lcd/backlight/bl_ldim/iw7027_bl.c"],
        },
        "CONFIG_AMLOGIC_BL_LDIM_IW7039": {
            True: ["vout/lcd/backlight/bl_ldim/iw7039_bl.c"],
        },
        "CONFIG_AMLOGIC_BL_LDIM_BLMCU": {
            True: ["vout/lcd/backlight/bl_ldim/mcu_bl.c"],
        },
        "CONFIG_AMLOGIC_AMBILIGHT": {
            True: [
                "vout/lcd/ambilight/ambilight_drv.c",
                "vout/lcd/ambilight/ambilight_debug.c",
            ],
        },
        "CONFIG_AMLOGIC_PERIPHERAL_LCD": {
            True: [
                "vout/peripheral_lcd/peripheral_lcd_drv.c",
                "vout/peripheral_lcd/peripheral_lcd_debug.c",
                "vout/peripheral_lcd/peripheral_lcd_spi.c",
                "vout/peripheral_lcd/peripheral_lcd_utils.c",
                "vout/peripheral_lcd/interface_chip/intel_8080.c",
                "vout/peripheral_lcd/interface_chip/spi_st7789.c",
                "vout/peripheral_lcd/interface_chip/spi_spd2010.c",
            ],
        },
        "CONFIG_AMLOGIC_DSC": {
            True: [
                "vout/dsc/dsc_drv.c",
                "vout/dsc/dsc_notify.c",
                "vout/dsc/dsc_config.c",
                "vout/dsc/dsc_hw.c",
                "vout/dsc/dsc_debug.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_VIDEO": {
            True: [
                "video_sink/video.c",
                "video_sink/video_func.c",
                "video_sink/video_keeper.c",
                "video_sink/vpp.c",
                "video_sink/video_hw.c",
                "video_sink/video_receiver.c",
                "video_sink/video_reg.c",
                "video_sink/video_signal_notify.c",
                "video_sink/video_multi_vsync.c",
                "video_sink/vpp_pq_process.c",
                "video_sink/vpp_afd.c",
                "video_sink/video_low_latency.c",
                "video_sink/video_trace.c",
                "video_sink/video_common.c",
                "video_sink/video_hw_s5.c",
                "video_sink/vpp_post_s5.c",
                "video_sink/video_reg_s5.c",
                "video_sink/video_uevent.c",
                "video_sink/video_safa.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_DUMMY_PROVIDER": {
            True: ["video_sink/dummy_provider.c"],
        },
        "CONFIG_AMLOGIC_MEDIA_FB": {
            True: [
                "osd/osd_hw.c",
                "osd/osd_fb.c",
                "osd/osd_debug.c",
                "osd/osd_backup.c",
                "osd/osd_logo.c",
                "osd/osd_io.c",
                "osd/osd_antiflicker.c",
                "osd/osd_clone.c",
                "osd/osd_drm.c",
                "osd/osd_rdma.c",
                "osd/osd_virtual.c",
            ],
        },
        "CONFIG_INSTABOOT": {
            True: ["osd/osd_progressbar.c"],
        },
        "CONFIG_AMLOGIC_MEDIA_VRR": {
            True: [
                "vrr/vrr_drv.c",
                "vrr/vrr_if.c",
                "vrr/vrr_notify.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_DEINTERLACE": {
            True: [
                "deinterlace/deinterlace.c",
                "deinterlace/deinterlace_hw.c",
                "deinterlace/deinterlace_mtn.c",
                "deinterlace/deinterlace_dbg.c",
                "deinterlace/nr_drv.c",
                "deinterlace/pulldown_drv.c",
                "deinterlace/detect3d.c",
                "deinterlace/nr_downscale.c",
                "deinterlace/di_pps.c",
                "deinterlace/film_mode_fmw/vof_soft_top.c",
                "deinterlace/film_mode_fmw/flm_mod_xx.c",
                "deinterlace/film_mode_fmw/film_fw1.c",
                "di_local/di_local.c",
                "di_multi/deinterlace.c",
                "di_multi/dd_s4dw.c",
                "di_multi/dd_rotation.c",
                "di_multi/deinterlace_hw.c",
                "di_multi/deinterlace_dbg.c",
                "di_multi/nr_downscale.c",
                "di_multi/di_pps.c",
                "di_multi/di_vframe.c",
                "di_multi/di_prc.c",
                "di_multi/di_pre.c",
                "di_multi/di_post.c",
                "di_multi/di_reg_tab.c",
                "di_multi/di_dbg.c",
                "di_multi/di_que.c",
                "di_multi/di_sys.c",
                "di_multi/di_task.c",
                "di_multi/di_api.c",
                "di_multi/di_que_buf.c",
                "di_multi/di_decont.c",
                "di_multi/di_decontour.c",
                "di_multi/di_mmu_box.c",
                "di_multi/di_mem_scatter.c",
                "di_multi/di_plink_api.c",
                "di_multi/di_prelink.c",
                "di_multi/di_postlink.c",
                "di_multi/di_interface.c",
                "di_multi/set_hdr2_v0_di.c",
                "di_multi/dolby_sys.c",
                "di_multi/di_hw_v2.c",
                "di_multi/di_hw_v3.c",
                "di_multi/di_afbc_v3.c",
                "di_multi/di_afbc_dbg.c",
                "di_multi/tb_task.c",
            ],
        },
        "CONFIG_AMLOGIC_POST_PROCESS_MANAGER": {
            True: [
                "video_processor/ppmgr/ppmgr_drv.c",
                "video_processor/ppmgr/ppmgr_vpp.c",
                "video_processor/ppmgr/decontour.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_UTILS": {
            True: ["video_processor/utils/vfutil.c"],
        },
        "CONFIG_AMLOGIC_PIC_DEC": {
            True: ["video_processor/pic_dev/picdec.c"],
        },
        "CONFIG_AMLOGIC_V4L_VIDEO2": {
            True: ["video_processor/video_dev/amlvideo2.c"],
        },
        "CONFIG_AMLOGIC_V4L_VIDEO3": {
            True: ["video_processor/v4lvideo/v4lvideo.c"],
        },
        "CONFIG_AMLOGIC_VIDEO_COMPOSER": {
            True: [
                "video_processor/video_composer/video_composer.c",
                "video_processor/video_composer/vframe_ge2d_composer.c",
                "video_processor/video_composer/videodisplay.c",
                "video_processor/video_composer/vframe_dewarp_composer.c",
                "video_processor/video_composer/vframe_vicp_composer.c",
                "video_processor/common/video_pp_common.c",
            ],
        },
        "CONFIG_AMLOGIC_VIDEO_TUNNEL": {
            True: ["video_processor/videotunnel/videotunnel.c"],
        },
        "CONFIG_AMLOGIC_VIDEOQUEUE": {
            True: ["video_processor/videoqueue/videoqueue.c"],
        },
        "CONFIG_AMLOGIC_DI_PROCESS": {
            True: [
                "video_processor/di_process/di_proc_file.c",
                "video_processor/di_process/di_process.c",
            ],
        },
        "CONFIG_AMLOGIC_BUF_MANAGER": {
            True: ["video_processor/buf_manager/buf_manager.c"],
        },
        "CONFIG_AMLOGIC_MEDIA_V2D": {
            True: [
                "video_processor/v2d/v2d.c",
                "video_processor/v2d/v2d_dewarp_composer.c",
                "video_processor/v2d/v2d_ge2d_composer.c",
		"video_processor/v2d/v2d_vicp_composer.c",
            ],
        },
        "CONFIG_AMLOGIC_VIDEO_DISPLAY": {
            True: [
                "video_processor/videodisplay/videodisplay_util.c",
                "video_processor/videodisplay/videodisplay_drv.c",
                "video_processor/videodisplay/videodisplay_interface.c",
                "video_processor/videodisplay/videodisplay_process.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_ENHANCEMENT_DOLBYVISION": {
            True: [
                "enhancement/amdolby_vision/amdv.c",
                "enhancement/amdolby_vision/amdv_hw.c",
                "enhancement/amdolby_vision/amdv_pq_config.c",
                "enhancement/amdolby_vision/md_config.c",
                "enhancement/amdolby_vision/amdv_hw5.c",
                "enhancement/amdolby_vision/amdv_hw5_process.c",
                "enhancement/amdolby_vision/amdv_uevent.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_ENHANCEMENT_VECM": {
            True: [
                "enhancement/amvecm/amve.c",
                "enhancement/amvecm/amcm.c",
                "enhancement/amvecm/amcsc.c",
                "enhancement/amvecm/amcsc_pip.c",
                "enhancement/amvecm/amvecm.c",
                "enhancement/amvecm/keystone_correction.c",
                "enhancement/amvecm/bitdepth.c",
                "enhancement/amvecm/set_hdr2_v0.c",
                "enhancement/amvecm/s5_set_hdr2_v0.c",
                "enhancement/amvecm/dnlp_cal.c",
                "enhancement/amvecm/cm2_adj.c",
                "enhancement/amvecm/pattern_detection.c",
                "enhancement/amvecm/vlock.c",
                "enhancement/amvecm/hdr/am_hdr10_plus.c",
                "enhancement/amvecm/local_contrast.c",
                "enhancement/amvecm/amvecm_drm.c",
                "enhancement/amvecm/hdr/am_hdr10_plus_ootf.c",
                "enhancement/amvecm/hdr/gamut_convert.c",
                "enhancement/amvecm/hdr/am_hdr10_tm.c",
                "enhancement/amvecm/ai_pq/ai_pq.c",
                "enhancement/amvecm/util/huffman.c",
                "enhancement/amvecm/util/base64.c",
                "enhancement/amvecm/util/enc_dec.c",
                "enhancement/amvecm/cabc_aadc/cabc_aadc_fw.c",
                "enhancement/amvecm/hdr/am_hdr10_tmo_fw.c",
                "enhancement/amvecm/frame_lock_policy.c",
                "enhancement/amvecm/blue_stretch/blue_str.c",
                "enhancement/amvecm/color/color_tune.c",
                "enhancement/amvecm/am_lut3d.c",
                "enhancement/amvecm/color/ai_color.c",
                "enhancement/amvecm/amve_v2.c",
                "enhancement/amvecm/hdr/am_cuva_hdr_tm.c",
                "enhancement/amvecm/am_dma_ctrl.c",
                "enhancement/amvecm/hdr/am_hdr_sbtm.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_ENHANCEMENT_PRIME_SL": {
            True: [
                "enhancement/amprime_sl/amprime_sl.c",
                "enhancement/amprime_sl/amprime_sl_hw.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_FRAME_SYNC": {
            True: [
                "frame_sync/ptsserv.c",
                "frame_sync/timestamp.c",
                "frame_sync/tsync.c",
                "frame_sync/tsync_pcr.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_GDC": {
            True: [
                "gdc/src/fw_lib/acamera_gdc.c",
                "gdc/src/platform/system_gdc_io.c",
                "gdc/app/gdc_main.c",
                "gdc/app/gdc_module.c",
                "gdc/app/gdc_dmabuf.c",
                "gdc/app/gdc_wq.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_TVIN": {
            True: [
                "vin/tvin/tvin_format_table.c",
                "vin/tvin/tvin_frontend.c",
                "vin/tvin/tvin_global.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_VDIN": {
            True: [
                "vin/tvin/vdin/vdin_vf.c",
                "vin/tvin/vdin/vdin_debug.c",
                "vin/tvin/vdin/vdin_drv.c",
                "vin/tvin/vdin/vdin_afbce_t3x.c",
                "vin/tvin/vdin/vdin_ctl_t3x.c",
                "vin/tvin/vdin/vdin_ctl_s5.c",
                "vin/tvin/vdin/vdin_afbce.c",
                "vin/tvin/vdin/vdin_mmu_box.c",
                "vin/tvin/vdin/vdin_mem_scatter.c",
                "vin/tvin/vdin/vdin_v4l2.c",
                "vin/tvin/vdin/vdin_v4l2_dbg.c",
                "vin/tvin/vdin/vdin_v4l2_if.c",
                "vin/tvin/vdin/vdin_hdr.c",
                "vin/tvin/vdin/vdin_ctl.c",
                "vin/tvin/vdin/vdin_screen.c",
                "vin/tvin/vdin/vdin_sm.c",
                "vin/tvin/vdin/vdin_canvas.c",
                "vin/tvin/vdin/vdin_hw.c",
                "vin/tvin/vdin/vdin_vfce.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_TVIN_AFE": {
            True: [
                "vin/tvin/tvafe/tvafe_cvd.c",
                "vin/tvin/tvafe/tvafe_general.c",
                "vin/tvin/tvafe/tvafe_debug.c",
                "vin/tvin/tvafe/tvafe_pq_table.c",
                "vin/tvin/tvafe/tvafe.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_TVIN_VBI": {
            True: [
                "vin/tvin/tvafe/tvafe_vbi.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_TVIN_AVDETECT": {
            True: [
                "vin/tvin/tvafe/tvafe_avin_detect.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_VIUIN": {
            True: [
                "vin/tvin/viu/viuin.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_TVIN_BT656": {
            True: [
                "vin/tvin/bt656/bt656_601_in.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_TVIN_CSI": {
            True: [
                "vin/tvin/csi/csi.c",
                "vin/tvin/csi/mipi_hw.c",
                "vin/tvin/csi/mipi_hw_s6.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_TVIN_HDMI": {
            True: [
                "vin/tvin/hdmirx/hdmi_rx_wrapper.c",
                "vin/tvin/hdmirx/hdmi_rx_hw.c",
                "vin/tvin/hdmirx/hdmi_rx_drv.c",
                "vin/tvin/hdmirx/hdcp_rx_main.c",
                "vin/tvin/hdmirx/hdmi_rx_eq.c",
                "vin/tvin/hdmirx/hdmi_rx_repeater.c",
                "vin/tvin/hdmirx/hdmi_rx_pktinfo.c",
                "vin/tvin/hdmirx/hdmi_rx_edid.c",
                "vin/tvin/hdmirx/hdmi_rx_hw_tl1.c",
                "vin/tvin/hdmirx/hdmi_rx_hw_tm2.c",
                "vin/tvin/hdmirx/hdmi_rx_hw_t5.c",
                "vin/tvin/hdmirx/hdmi_rx_hw_t7.c",
                "vin/tvin/hdmirx/hdmi_rx_hw_t5m.c",
                "vin/tvin/hdmirx/hdmi_rx_hw_t3x.c",
                "vin/tvin/hdmirx/hdmi_rx_hw_t6d.c",
                "vin/tvin/hdmirx/hdmi_rx_hw_txhd2.c",
                "vin/tvin/hdmirx/hdmi_rx_diag.c",
                "vin/tvin/hdmirx/hdmi_rx_hw_t6w.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_TVIN_DSC_DEC": {
            True: [
                "vin/tvin/dsc_dec/dsc_dec_drv.c",
                "vin/tvin/dsc_dec/dsc_dec_config.c",
                "vin/tvin/dsc_dec/dsc_dec_hw.c",
                "vin/tvin/dsc_dec/dsc_dec_debug.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_ADC": {
            True: [
                "vin/adc/adc.c",
            ],
        },
        "CONFIG_AMLOGIC_LINUX_STD_CEC": {
            True: [
                "cec/std_ao_cec.c",
                "cec/hdmi_aocec_api.c",
                "cec/hdmi_cec_dump.c",
            ],
            False: [
                "cec/hdmi_ao_cec.c",
                "cec/hdmi_aocec_api.c",
                "cec/hdmi_cec_dump.c",
            ]
        },
        "CONFIG_AMLOGIC_ATV_DEMOD": {
            True: [
                "atv_demod/atvdemod_func.c",
                "atv_demod/atvauddemod_func.c",
                "atv_demod/atv_demod_v4l2.c",
                "atv_demod/atv_demod_driver.c",
                "atv_demod/atv_demod_ops.c",
                "atv_demod/atv_demod_afc.c",
                "atv_demod/atv_demod_monitor.c",
                "atv_demod/atv_demod_access.c",
                "atv_demod/atv_demod_debug.c",
                "atv_demod/atv_demod_isr.c",
                "atv_demod/atv_demod_ext.c",
            ],
        },
        "CONFIG_AMLOGIC_DTV_DEMOD": {
            True: [
                "dtv_demod/demod_func.c",
                "dtv_demod/i2c_func.c",
                "dtv_demod/tuner_func.c",
                "dtv_demod/amlfrontend.c",
                "dtv_demod/demod_dbg.c",
                "dtv_demod/aml_demod.c",
            ],
        },
        "CONFIG_AMLOGIC_DEMOD_SUPPORT_ATSC": {
            True: [
                "dtv_demod/atsc/atsc_func.c",
                "dtv_demod/atsc/atsc_frontend.c",
            ],
        },
        "CONFIG_AMLOGIC_DEMOD_SUPPORT_DVBC": {
            True: [
                "dtv_demod/dvbc/dvbc_func.c",
                "dtv_demod/dvb_qam/dvbc_v2.c",
                "dtv_demod/dvb_qam/dvbc_v3.c",
                "dtv_demod/dvbc/dvbc_frontend.c",
            ],
        },
        "CONFIG_AMLOGIC_DEMOD_SUPPORT_DVBT": {
            True: [
                "dtv_demod/dvbt/dvbt_v2.c",
                "dtv_demod/dvbt/dvbt_frontend.c",
            ],
        },
        "CONFIG_AMLOGIC_DEMOD_SUPPORT_DTMB": {
            True: [
                "dtv_demod/dtmb/dtmb_func.c",
                "dtv_demod/dtmb/dtmb_frontend.c",
            ],
        },
        "CONFIG_AMLOGIC_DEMOD_SUPPORT_DVBS": {
            True: [
                "dtv_demod/dvbs/dvbs.c",
                "dtv_demod/dvbs/dvbs_frontend.c",
                "dtv_demod/dvbs/dvbs_diseqc.c",
                "dtv_demod/dvbs/dvbs_singlecable.c",
                "dtv_demod/dvbs/lnb_controller/gpio/gpio_lnbc.c",
                "dtv_demod/dvbs/lnb_controller/wt20_1811/wt20_1811.c",
            ],
        },
        "CONFIG_AMLOGIC_DEMOD_SUPPORT_ISDBT": {
            True: [
                "dtv_demod/isdbt/isdbt_func.c",
                "dtv_demod/isdbt/isdbt_frontend.c",
            ],
        },
        "CONFIG_AMLOGIC_DEMOD_SUPPORT_J83B": {
            True: [
                "dtv_demod/dvb_qam/dvbc_v2.c",
                "dtv_demod/dvb_qam/dvbc_v3.c",
                "dtv_demod/j83b/j83b_frontend.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_MSYNC": {
            True: [
                "avsync/msync.c",
            ],
        },
        "CONFIG_AMLOGIC_MEDIA_FRC": {
            True: [
                "frc/frc_drv.c",
                "frc/frc_reg.c",
                "frc/frc_proc.c",
                "frc/frc_dbg.c",
                "frc/frc_interface.c",
                "frc/frc_buf.c",
                "frc/frc_hw.c",
                "frc/frc_rdma.c",
                "frc/frc_memc_dbg.c",
            ],
        },
        "CONFIG_AMLOGIC_DI_V4L": {
            True: [
                "di_v4l/di_v4l.c",
            ],
        },
    },
    hdrs = [
        "common/rdma/rdma.h",
        "video_processor/videodisplay/videodisplay_interface.h",
        "vout/vout_serve/vout_func.h",
        "//common:drivers/media/tuners/tuner-i2c.h",
        "vout/cvbs/cvbs_out.h",
        "vout/cvbs/cvbs_mode.h",
        "enhancement/amvecm/amcsc.h",
    ],
    linux_includes = [
        "osd",
        "common/ion_dev",
        "common/rdma",
        "video_processor/videodisplay/",
        "vout/vout_serve",
        "vout/",
        "vout/meson_tx_connector/",
        "vout/meson_tx_connector/hdmitx/",
        "vout/meson_tx_connector/hdcp",
        "vout/meson_tx_connector/hdmitx/tx20",
        "vout/meson_tx_connector/hdmitx/tx21",
        "vout/meson_tx_connector/dptx/",
        "vout/meson_tx_connector/phy/",
        "vin/tvin/hdmirx",
        "vin/tvin",
        "deinterlace",
        "di_multi",
        "di_multi/sc2",
        "di_local",
        "gdc/app",
        "gdc/inc",
        "gdc/inc/api",
        "gdc/inc/gdc",
        "gdc/inc/sys",
        "gdc/src/platform",
        "gdc/src/fw_lib",
        "atv_demod",
        "dvb-core",
        "tuners",
        "vin/tvin/tvafe",
        "dtv_demod",
        "dtv_demod/include",
        "dtv_demod/atsc",
        "dtv_demod/dvbc",
        "dtv_demod/dvb_qam",
        "dtv_demod/dvbt",
        "dtv_demod/dtmb",
        "dtv_demod/dvbs",
        "dtv_demod/dvbs/lnb_controller",
        "dtv_demod/dvbs/lnb_controller/gpio",
        "dtv_demod/dvbs/lnb_controller/wt20_1811",
        "dtv_demod/isdbt",
        "dtv_demod/j83b",
        "enhancement/amvecm",
        "di_v4l",
        "di_mini",
        "di_mini/sc2",
        "../../../common/drivers/media/tuners",
        "../../../common/include/media",
        "../efuse_unifykey"
    ],
    local_defines = [
        "__module_param(name, type, perm)=",
        "__module_param_named(name, value, type, perm)=",
        "__module_param_array(name, type, nump, perm)=",
        "__module_param_cb(name, ops, arg, perm)=",
        "__module_param_array_named(name, array, type, nump, perm)=",
        "COMMON_DRIVERS_DIR=common_drivers",
        "CONFIG_DI_CHANNEL_NUM_1=0",
        "CONFIG_DI_CHANNEL_NUM_2=0",
        "MODIFY_TIMESTAMP_INC_WITH_PLL",
        "CALC_CACHED_TIME",
        "DVB_CORE_ORI=1",
    ],
    out = "aml_media.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/media/dvb-core:dvb-core",
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
        "//common_drivers/drivers/clk/meson:amlogic-clk",
        "//common_drivers/drivers/gpio:amlogic-gpio",
        "//common_drivers/drivers/power:amlogic-power",
        "//common_drivers/drivers/pm:amlogic-pm",
        "//common_drivers/drivers/secmon:amlogic-secmon",
        "//common_drivers/drivers/cpu_info:amlogic-cpuinfo",
        "//common_drivers/drivers/efuse_unifykey:amlogic-efuse-unifykey",
        "//common_drivers/drivers/pwm:amlogic-pwm",
        "//common_drivers/drivers/memory_ext:page_trace",
        "//common_drivers/drivers/memory_debug:amlogic-memory-debug",
        "//common_drivers/drivers/tee:amlogic-tee",
        "//common_drivers/drivers/dvb:amlogic-dvb",
        "//common_drivers/drivers/aml_tee:tee",
        "//common_drivers/drivers/uvm:aml_uvm",
    ],
)

ddk_module(
    name = "amlogic-camera",
    srcs = glob([
        "camera/**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_VIDEO_CAPTURE": {
            True: [
                "camera/common/flashlight.c",
                "camera/common/plat_ctrl.c",
                "camera/common/vm.c",
                "camera/common/cam_prober.c",
                "camera/common/cam_probe_s6.c",
            ],
        },
        "CONFIG_AMLOGIC_VIDEO_CAPTURE_OV5640": {
            True: [
                "camera/ov5640.c",
            ],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[camera]: \" fmt"],
    copts = [
        "-Wframe-larger-than=3072",
    ],
    out = "amlogic-camera.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
    ],
)
